2002-12-03  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml:
	* doc/oprofile.1.in:
	* doc/Makefile.am: remove references to deprecated stuff
 
2002-12-03  John Levon  <levon@movementarian.org>

	* utils/opcontrol: add --version
 
2002-12-03  John Levon  <levon@movementarian.org>

	* utils/op_start:
	* utils/op_start_25:
	* utils/op_stop_25:
	* utils/op_stop: print deprecation notice
 
2002-12-03  John Levon  <levon@movementarian.org>

	* utils/op_session.c:
	* utils/op_dump: print deprecation notice
 
2002-12-03  John Levon  <levon@movementarian.org>

	* utils/opcontrol: do not shutdown on --reset. Send
	  signal on --reset/--save like op_session. Try to dump
	  like op_session to hack race "fix"
 
2002-12-03  John Levon  <levon@movementarian.org>

	* utils/opcontrol: complain on opcontrol --save 
 
2002-12-03  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_kernel.c:
	* daemon/opd_kernel.h: minor cleanup

	* libabi/abi.cpp:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp: fix bad include filename.

2002-12-03  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/.cvsignore:
	* libdb/Makefile.am:
	* libdb/*.c --> db-hash-name.c to db_name.c

	* dae/opd_image.h:
	* daemon/opd_image.h:
	* pp/samples_file.h: include db_hash.h

2002-12-03  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start_config.cpp: allow default value change w/o
	  breaking actual user.

2002-12-03  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* dae/opd_image.h:
	* dae/opd_kernel.c:
	* dae/opd_kernel.h:
	* dae/opd_parse_proc.c:
	* dae/opd_proc.c:
	* dae/opd_proc.h:
	* dae/opd_sample_files.c:
	* dae/oprofiled.c:
	* daemon/opd_image.h:
	* pp/op_merge.cpp:
	* pp/samples_file.h:
	* pp/samples_file.cpp:
	* pp/Makefile.am:
	* libabi/Makefile.am:
	* libabi/abi.cpp:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp: use hash table implementation of libdb

	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/ui/oprof_start.base.ui:
	* utils/op_start: